# QPath

./: CONTRIBUTING.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: tests.yml
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250301a001_add_gamification_progress_tables.py  73cbad05ecc9_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  gamification.py  projects.py  qmentor.py  test_db.py  tracks.py  users.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/models/: models.py
backend/app/repositories/: base.py
backend/app/services/: __init__.py  gamification_service.py  qmentor_service.py  user_service.py
backend/tests/: conftest.py  test_auth.py  test_gamification.py  test_gamification_and_tracks.py
docs/: Blueprint_formatado.md  DEPENDENCIAS.md  FASE_1_DETALHADA.md  MVP Completo_ Q-Path (Quantum Path).docx  MVP.md  PlanoDeAcao_formatado.md  README.md  ROADMAP_TECNICO.md  SETUP_LOCAL.md  documentation-audit.md
docs/architecture/: system-architecture.md  tech-stack.md
docs/overview/: mvp.md  product-vision.md
docs/roadmap/: quality-assurance.md  technical-roadmap.md
docs/setup/: frontend.md
src/: App.tsx  index.css  setupTests.ts
src/contexts/: AuthContext.tsx  UserContext.tsx
src/hooks/: useAuth.ts  useQMentor.ts
src/pages/: Dashboard.tsx  Perfil.tsx  Projetos.tsx  Roadmap.tsx  Trilhas.tsx
(+16 files in other folders)
